--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link href="/src/assets/css/animate.css" rel="stylesheet" />
+    <link href="/src/assets/css/animate.css" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
